38. Added support for native OTF2 traces. Use configure -otf=download and then TAU_TRACE=1, TAU_TRACE_FORMAT=otf2 while running.
39. Added support for both OpenSHMEM and MPI simultaneously. With MPI, serial programs now emit a warning. 
40. Added Pycoolr based GUI for online monitoring. 
41. Added -DISABLE_MEMORY_MANAGER configuration option. 

Version 2.25 changes (from 2.24):
1. Support for new PDT parsers cxxparse4101, cparse4101, and gfparse48
2. Introducing APEX. 
3. Added support for tau_exec -numa for tracking PAPI remote DRAM references. 
4. Added support for recycling pthread ids. 
5. Updates to TAU for OMPT support. 
6. PerfExplorer fixes for mean calculation for runtime breakdown charts. 
7. Added support for Argo ExaOSR BEACON backplane for event communication. 
8. Added preliminary support for Power 8 and ARM64. 
9. Added support for CUDA 7.5. 
10. Added support for OpenACC with PGI 15.10. 
11. Added support for new versions of MAQAO, PEBIL, and DyninstAPI 9.0.3. 
12. Added support for SGI MPT 2.13 with PSHMEM interface. 
13. Added support for PGI 16.x OpenACC compilers. 
14. Added support for gfparse48 from PDT 3.22 in tau_compiler.sh. 
15. Updated OpenCL support in TAU.
16. Improved callsite resolution. 
17. Improved BFD support for Xeon Phi. 
18. Added support for MPI-T interface (TAU_TRACK_MPI_T_PVARS, TAU_MPI_T_CVAR_METRICS, TAU_MPI_T_CVAR_VALUES). 
19. When a file is excluded from instrumentation, it is not parsed or compiled with compInst. 
20. Added APEX measurement library.
21. Added OpenSHMEM wrapper generator. 
22. Added -scorep=download configuration option to build TAU with Score-P. 
23. Updated CUDA support. 
24. OMPT updates. 
25. Added support for Cray KNL systems (module load craype-mic-knl). 
26. Fixed Opari2 compilation issues on Cray. 
27. Added support for launching ParaTools ThreadSpotter through tau_exec (-ptts). 


 
Version 2.24 changes (from 2.23):
1. Reduced OpenMP profiling overhead and memory footprint.