@@ -1852,6 +1852,14 @@ case $1 in
 	echo "NOTE: Using Cray Compute Node Linux options"
         echo "s/#$1#\(.*\)/$bs\1#$1#/g" >> $sedout
 	;;
+     CRAYCNL_PMI)
+	echo "NOTE: Using CrayCNL PMI (Process Management Interface) to track topology info" 
+        echo "s/#$1#\(.*\)/$bs\1#$1#/g" >> $sedout
+	;;
+     CRAYCNL_PMI_FOUND)
+	echo "NOTE: Found CrayCNL PMI (Process Management Interface) to track topology info" 
+        echo "s/#$1#\(.*\)/$bs\1#$1#/g" >> $sedout
+	;;
      CRAYCNL_CCE)
         echo "s/#$1#\(.*\)/$bs\1#$1#/g" >> $sedout
 	;;
